--- a/src/ims_Messages.properties
+++ b/src/ims_Messages.properties
@@ -2,3 +2,7 @@
 #REGISTRATION CONFIGURATION
 ############################
 company_name=Friends Interior
+product_name=Product Name
+product_code=Product Code
+mesure_unit=Unit Of Measure
+specific_unit=Unit specify
