--- a/src/ims_Messages.properties
+++ b/src/ims_Messages.properties
@@ -1,8 +1,28 @@
 #############################
 #REGISTRATION CONFIGURATION
 ############################
-company_name=Friends Interior
+company_fname=Friends
+company_lname=Interior
+company_welcome=Welcome
 product_name=Product Name
 product_code=Product Code
 mesure_unit=Unit Of Measure
 specific_unit=Unit specify
+company_dashboard=Dashboard
+company_user_Profile=User Profile
+company_product=Product
+company_item_configuration=Product Configuration
+company_master_entry=Master Entry
+company_purchase_entry=Purchase Entry
+company_purchase_edit=Purchase Edit
+company_sales=Sales
+company_customer_entry=Customer Entry
+company_product_sales=Product Sales
+company_edit_sales=Edit Sales
+company_pending_payment=Pending Payment
+company_report=Report
+company_stock_view=Stock View
+company_purchase_view=Purchase View
+company_sales_view=Sales View
+company_profitnloss=Profit and Loss
+company_sales_user=Sales by a user
