--- a/src/ims_Messages.properties
+++ b/src/ims_Messages.properties
@@ -26,3 +26,4 @@ company_purchase_view=Purchase View
 company_sales_view=Sales View
 company_profitnloss=Profit and Loss
 company_sales_user=Sales by a user
+product_group_code=Product group code
