--- a/src/ims_Messages.properties
+++ b/src/ims_Messages.properties
@@ -5,12 +5,24 @@ company_fname=Friends
 company_lname=Interior
 company_welcome=Welcome
 product_name=Product Name
+product_status=Status
+product_current_weight=Current Weight
+product_current_quantity=Current Quantity
 product_code=Product Code
 mesure_unit=Unit Of Measure
 specific_unit=Unit specify
 company_dashboard=Dashboard
 company_user_Profile=User Profile
 company_product=Product
+company_product_type=Product Type
+company_product_weight=Unit Weight
+company_product_quantity=Quantity
+company_unit_price=Unit Price
+company_cost_per_item=Cost per item
+company_vat_amount=Vat Amount
+company_k&p=K & P
+company_product_min_value=Min Value
+company_product_max_value=Max Value
 company_item_configuration=Product Configuration
 company_master_entry=Master Entry
 company_purchase_entry=Purchase Entry
@@ -27,3 +39,6 @@ company_sales_view=Sales View
 company_profitnloss=Profit and Loss
 company_sales_user=Sales by a user
 product_group_code=Product group code
+product_sub_total=Product Sub Total
+product_vat_amount=Total Vat Amount
+product_total_cost=Total Cost
