--- a/src/ims_Messages.properties
+++ b/src/ims_Messages.properties
@@ -42,3 +42,6 @@ product_group_code=Product group code
 product_sub_total=Product Sub Total
 product_vat_amount=Total Vat Amount
 product_total_cost=Total Cost
+unit_quantiity=Unit for quantity
+unit_weight=Unit for weight
+subitemtype_req=Is sub item required
