--- a/src/ims_Messages.properties
+++ b/src/ims_Messages.properties
@@ -48,4 +48,5 @@ subitemtype_req=Sub item required
 edit_row=Edit
 first_email=arijitroy.mca@gmail.com
 last_email=rajesh.maji05@gmail.com
+email_shedule_time=0/50 * * * * ?
 purchase_ref_id=Purchase ref. id
