--- a/src/ims_Messages.properties
+++ b/src/ims_Messages.properties
@@ -41,7 +41,7 @@ company_sales_user=Sales by a user
 product_group_code=Product group code
 product_sub_total=Product Sub Total
 product_vat_amount=Total Vat Amount
-product_total_cost=Total Cost
+product_total_cost=Total after discount
 unit_quantiity=Unit for quantity
 unit_weight=Unit for weight
 subitemtype_req=Sub item required
@@ -50,3 +50,7 @@ first_email=arijitroy.mca@gmail.com
 last_email=rajesh.maji05@gmail.com
 email_shedule_time=0/50 * * * * ?
 purchase_ref_id=Purchase ref. id
+item_name=Select an item
+customer_vat_no=Vat No
+discount_over_total=Discount
+vat_percentage=Vat percentage
