--- a/src/ims_Messages.properties
+++ b/src/ims_Messages.properties
@@ -54,3 +54,4 @@ item_name=Select an item
 customer_vat_no=Vat No
 discount_over_total=Discount
 vat_percentage=Vat percentage
+company_billing=Billing
