--- a/src/ims_Messages.properties
+++ b/src/ims_Messages.properties
@@ -55,3 +55,4 @@ customer_vat_no=Vat No
 discount_over_total=Discount
 vat_percentage=Vat percentage
 company_billing=Billing
+billing_header=TAX INVOICE CUM CHALLAN
