--- a/src/ims_Messages.properties
+++ b/src/ims_Messages.properties
@@ -56,3 +56,22 @@ discount_over_total=Discount
 vat_percentage=Vat percentage
 company_billing=Billing
 billing_header=TAX INVOICE CUM CHALLAN
+company_address1=Lalbazar
+company_address2=Durgapur By PassRoad
+company_district=Bankura
+company_pin=722101
+company_mobile=Mob. No. 
+company_mobile_no=+919233367222/19
+company_email=E-mail 
+company_email_id=friendsinteriorbankura.007@gmail.com
+company_buyer=Buyer
+company_buyer_name=Jyoti Sales Corporation
+company_buyer_address=Bankura
+invoice_no=Invoice No.
+invoice_date=Date
+invoice_delivery_note=Delivery Note
+invoice_supplier_ref=Supplier's Ref.
+invoice_buyer_orderno=Buyer's Order No.
+invoice_despatch_no=Despatch Document No.
+invoice_despatch=Despatched through
+invoice_termas=Terms of Delivery
