--- a/src/ims_Messages.properties
+++ b/src/ims_Messages.properties
@@ -75,3 +75,13 @@ invoice_buyer_orderno=Buyer's Order No.
 invoice_despatch_no=Despatch Document No.
 invoice_despatch=Despatched through
 invoice_termas=Terms of Delivery
+invoice_des_goods=Description of Goods
+invoice_quantity=Quantity
+invoice_rate=Rate
+invoice_unit=Per
+invoice_amount=Amount
+invoice_subtotal=Subtotal
+invoice_total=Total
+invoice_amount_txt=Amount chargable(in words)
+invoice_amount_paid=Amount Paid
+invoice_balance_due=Balance Due
