--- a/src/ims_Messages.properties
+++ b/src/ims_Messages.properties
@@ -48,7 +48,7 @@ subitemtype_req=Sub item required
 edit_row=Edit
 first_email=arijitroy.mca@gmail.com
 last_email=rajesh.maji05@gmail.com
-email_shedule_time=0/50 * * * * ?
+email_shedule_time=0 0/15 * * * ?
 purchase_ref_id=Purchase ref. id
 item_name=Select an item
 customer_vat_no=Vat No
@@ -65,7 +65,7 @@ company_mobile_no=+919233367222/19
 company_email=E-mail 
 company_email_id=friendsinteriorbankura.007@gmail.com
 company_buyer=Buyer
-company_buyer_name=Jyoti Sales Corporation
+company_buyer_name=Customer Name
 company_buyer_address=Bankura
 invoice_no=Invoice No.
 invoice_date=Date
@@ -85,3 +85,4 @@ invoice_total=Total
 invoice_amount_txt=Amount chargable(in words)
 invoice_amount_paid=Amount Paid
 invoice_balance_due=Balance Due
+sub_total_with_vat=Sub total including vat
