--- a/src/ims_Messages.properties
+++ b/src/ims_Messages.properties
@@ -47,8 +47,8 @@ unit_quantiity=Unit for quantity
 unit_weight=Unit for weight
 subitemtype_req=Sub item required
 edit_row=Edit
-first_email=arijitroy.mca@gmail.com
-last_email=rajesh.maji05@gmail.com
+first_email=xxxxx@xxx.xxx
+last_email=xxxxx@xxx.xxx
 email_shedule_time=0 0/15 * * * ?
 purchase_ref_id=Purchase ref. id
 item_name=Select an item
