--- a/src/ims_Messages.properties
+++ b/src/ims_Messages.properties
@@ -24,9 +24,9 @@ company_gown=Gown
 company_k&p=K & P
 company_product_min_value=Min Value
 company_product_max_value=Max Value
-company_item_configuration=Product Configuration
-company_master_entry=Master Entry
-company_purchase_entry=Purchase Entry
+company_item_configuration=Alert Configuration
+company_master_entry=Master Item
+company_purchase_entry=Stock Entry
 company_purchase_edit=Purchase Edit
 company_sales=Sales
 company_customer_entry=Customer Entry
