--- a/src/ims_Messages.properties
+++ b/src/ims_Messages.properties
@@ -20,7 +20,7 @@ company_product_quantity=Quantity
 company_unit_price=Unit Price
 company_cost_per_item=Total Item Price
 company_vat_amount=Vat Amount
-company_gown=Gown
+company_gown=Godown
 company_k&p=K & P
 company_product_min_value=Min Value
 company_product_max_value=Max Value
