--- a/src/ims_Messages.properties
+++ b/src/ims_Messages.properties
@@ -87,3 +87,4 @@ invoice_amount_txt=Amount chargable(in words)
 invoice_amount_paid=Amount Paid
 invoice_balance_due=Balance Due
 sub_total_with_vat=Sub total including vat
+vendor_payment_menu=Vendor payment
