--- a/.classpath
+++ b/.classpath
@@ -26,12 +26,13 @@
 	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/servlet-api.jar"/>
 	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/slf4j-api-1.6.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/slf4j-simple-1.6.1.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/dsn.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/gimap.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/imap.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/mailapi.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/pop3.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/quartz-2.1.7.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/smtp.jar"/>
+	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/dsn.jar"/>
+	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/gimap.jar"/>
+	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/imap.jar"/>
+	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/mailapi.jar"/>
+	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/pop3.jar"/>
+	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/quartz-2.1.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/smtp.jar"/>
+	<classpathentry exported="true" kind="lib" path="I:/Collection/Backup08.12.15/Documents/NetBeansProjects/evoting/build/web/WEB-INF/lib/jtds-1.3.0.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
