--- a/src/ims_Messages.properties
+++ b/src/ims_Messages.properties
@@ -50,7 +50,7 @@ edit_row=Edit
 first_email=xxxxx@xxx.xxx
 last_email=xxxxx@xxx.xxx
 email_shedule_time=0 0/15 * * * ?
-purchase_ref_id=Purchase ref. id
+purchase_ref_id=Purchase ref id
 item_name=Select an item
 customer_vat_no=Vat No
 discount_over_total=Discount
@@ -88,3 +88,7 @@ invoice_amount_paid=Amount Paid
 invoice_balance_due=Balance Due
 sub_total_with_vat=Sub total including vat
 vendor_payment_menu=Vendor payment
+vendor_name=Company name
+vendor_payment=Payment
+vendor_balance=Balance
+vendor_advance=Advance
