--- a/src/ims_Messages.properties
+++ b/src/ims_Messages.properties
@@ -52,7 +52,7 @@ last_email=xxxxx@xxx.xxx
 email_shedule_time=0 0/15 * * * ?
 purchase_ref_id=Purchase ref id
 item_name=Select an item
-customer_vat_no=Vat No
+customer_vat_no=Buyer vat No
 discount_over_total=Discount
 vat_percentage=Vat percentage
 company_billing=Billing
