--- a/.classpath
+++ b/.classpath
@@ -33,6 +33,6 @@
 	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/pop3.jar"/>
 	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/quartz-2.1.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/smtp.jar"/>
-	<classpathentry exported="true" kind="lib" path="I:/Collection/Backup08.12.15/Documents/NetBeansProjects/evoting/build/web/WEB-INF/lib/jtds-1.3.0.jar"/>
+<classpathentry kind="lib" path="I:/Collection/Backup08.12.15/Documents/NetBeansProjects/evoting/build/web/WEB-INF/lib/jtds-1.3.0.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
